# strawberry-ini

./: CMakeLists.txt  Doxyfile.in  README.md  ini_dictionary.h  ini_parser.h  ini_reader.h
examples/: CMakeLists.txt  example-01.c
include/: ini_parser.h
tests/: CMakeLists.txt  check_ini.c
